[package]
name = "hypertube"
version = "0.2.2"
edition = "2021"
description = "Hypertube is a library for the creation and usage of TUN devices."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = "0.2.2"
ioctl-sys = "0.8.0"
libc = "0.2"
